--- a/demo/app.less
+++ b/demo/app.less
@@ -1,4 +1,5 @@
-body{
-  background-color: gray;
-  background: url("./712.gif") no-repeat;
-}
+h1 {
+    color: #369;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 250%;
+  }
